# NeuralNetwork

./: .gitignore  CMakeLists.txt  CNN1.1.txt  debug_main.cc  main.cc  points.txt  save  setup.sh  test_unified_helpers.cc
.github/workflows/: ci.yml
data/: binary.txt  binary_validation.txt  points.txt  random_wave.txt  sine_validation.txt  validation.txt
data/Pluto/: rx_tx_test.csv
examples/: CMakeLists.txt
examples/cnn_eval/: cnn_eval.cc  cnn_eval.h
examples/cnn_train/: cnn_train.cc  cnn_train.h
examples/common/: Common.h
examples/gnu_eval/: gnu_eval.cc  gnu_eval.h
examples/neural_eval/: neural_eval.cc  neural_eval.h
examples/neural_train/: neural_train.cc  neural_train.h
examples/pluto_eval/: pluto_eval.cc  pluto_eval.h
examples/pluto_train/: pluto_train.cc  pluto_train.h
examples/radio_eval/: radio_eval.cc  radio_eval.h
examples/radio_train/: radio_train.cc  radio_train.h
gnuradio/: CapturePlutoData.py  VariableModulation.grc  VariableModulation.py  VariableModulationTest.grc  VariableModulationTrain.grc  VariableModulation_epy_block_0.py  capture_pluto_data.py
include/: ActivationReLU.h  ActivationSoftmax.h  ActivationSoftmaxLossCategoricalCrossentropy.h  Helpers.h  LayerDense.h  Model.h  NeuralNetwork.h
include/Accuracy/: Accuracy.h  AccuracyCategorical.h  AccuracyRegression.h
include/Activation/: Activation.h  ActivationLinear.h  ActivationReLU.h  ActivationSigmoid.h  ActivationSoftmax.h  ActivationSoftmaxLossCategoricalCrossentropy.h
include/Layer/: BatchNormalization.h  CNNLayerBase.h  Convolution.h  Convolution1D.h  Convolution2D.h  DenseLayerBase.h  LayerBase.h  LayerDense.h  LayerDropout.h  LayerInput.h  LayerInterface.h  MaxPooling.h  MaxPooling1D.h  Pooling.h  Pooling1D.h  TrainableCNNLayer.h  TrainableDenseLayer.h
include/Loss/: Loss.h  LossBinaryCrossEntropy.h  LossCategoricalCrossentropy.h  LossMeanAbsoluteError.h  LossMeanSquaredError.h
include/Metal/: MetalActivationReLU.h  MetalDevice.h  MetalLayerDense.h
include/Model/: Model.h
include/Optimizer/: AdaGrad.h  Adam.h  Optimizer.h  RMSProp.h  StochasticGradientDescent.h
include/Utils/: Helpers.h  Serialization.h  TensorUtils.h  ZMQ.h  ZMQWrapper.h  ZipReader.h
misc/: DataExtractor.py
src/: ActivationSoftmaxLossCategoricalCrossentropy.cc  Helpers.cc  LayerDense.cc  Model.cc
src/Accuracy/: Accuracy.cc  AccuracyCategorical.cc  AccuracyRegression.cc
src/Activation/: ActivationLinear.cc  ActivationReLU.cc  ActivationSigmoid.cc  ActivationSoftmax.cc  ActivationSoftmaxLossCategoricalCrossentropy.cc
src/Layer/: BatchNormalization.cc  Convolution.cc  Convolution1D.cc  Convolution2D.cc  LayerDense.cc  LayerDropout.cc  LayerInput.cc  MaxPooling.cc  MaxPooling1D.cc  Pooling.cc  Pooling1D.cc
src/Loss/: Loss.cc  LossBinaryCrossEntropy.cc  LossCategoricalCrossentropy.cc  LossMeanAbolsuteError.cc  LossMeanAbsoluteError.cc  LossMeanSquaredError.cc
src/Metal/: MetalActivationReLU.cc  MetalDevice.mm  MetalLayerDense.cc
src/Model/: Model.cc
src/Optimizer/: AdaGrad.cc  Adam.cc  Optimizer.cc  RMSProp.cc  StochasticGradientDescent.cc
src/Utils/: Helpers.cc  Serialization.cc  TensorUtils.cc  ZMQ.cc  ZipReader.cc  generate_radio_dataset.py  test_radio_generator.py
test/: CMakeLists.txt  TestAccuracy.cc  TestActivations.cc  TestCNNIntegration.cc  TestConvolution.cc  TestConvolution1D.cc  TestConvolution1DGradients.cc  TestGradientCheck.cc  TestGradientCheck_simple.cc  TestHelpers.cc  TestLayerDense.cc  TestLayerDropout.cc  TestLosses.cc  TestMaxPooling1D.cc  TestModel.cc  TestModelSaveLoadIntegration.cc  TestOptimizers.cc  TestPooling.cc  TestTensorUtils.cc  TestZMQ.cc
